--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Daddy Jokes</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div class="container">
+		<button id="button">Show Daddy Joke</button>
+		<audio id="audio" controls></audio>
+	</div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
